# clankeredchuansourcecode

./: .gitattributes  .replit  mediascript_tagscript_documentation.md  pnpm-lock.yaml  pyproject.toml  replit.md  replit.nix  requirements.txt  setup.sh  tagscriptdocumentation.md
.agents/memory/: MEMORY.md  api-server-port-conflict.md  mediascript-smoke-tests.md
artifacts/api-server/: build.mjs  package.json  requirements.txt
artifacts/api-server/assets/: AccurateInvertLuminosity.cube
artifacts/api-server/src/: app.ts  index.ts
artifacts/api-server/src/bot/: index.ts  register.ts  run-ts.mjs
artifacts/api-server/src/bot/commands/: addsource.ts  ai.ts  audiotoimage.ts  block.ts  bytebeat.ts  canvas.ts  catboxupload.ts  cq.ts  cqt.ts  cwt.ts  effectsgif.ts  fft.ts  googlesearchimage.ts  ihtx.ts  imagetoaudio.ts  iv.ts  lastexport.ts  lsc.ts  mediaeffects.ts  nparison.ts  ping.ts  status.ts  sync.ts  syncalt.ts  tag.ts  tts.ts  veb.ts  viz.ts  waveform.ts  worldnumbers.ts  ytdl.ts
artifacts/api-server/src/bot/effects/: AutotuneBot.py  addSounds.py  betterStutter.py  captions.py  datamosh.py  download.py  filters.ts  fixPrint.py  listHelper.py  parser.ts  pathHelper.py  processor.ts  ricecake.py  subprocessHelper.py  videoCrasher.py  videoEdit.py  ytp.py
artifacts/api-server/src/bot/lib/: embeds.ts  logger.ts
artifacts/api-server/src/lib/: logger.ts
bot/: bot.py
bot/effects/: lsc.py
bot/utils/: catbox.py  download.py
data/: blocks.json  tags.json  tags.json.bak
