[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "discord-py>=2.3.0",
    "ffmpeg-python==0.2.0",
    "matplotlib>=3.11.0",
    "pillow>=12.2.0",
    "pydub>=0.25.1",
    "sox>=1.5.0",
    "yt-dlp>=2026.6.9",
]
